has football field of cells with only js animation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,24 @@
 html {
-  font-size: 12px; }
+  font-size: 8px; }
 
 body {
   margin: 0;
   background-color: #111; }
 
 #board-container {
-  perspective: 40rem; }
+  perspective: 30rem; }
 
 #board {
   position: relative;
+  top: -8rem;
   margin: 0 auto;
   /* 9 col */
   width: 36rem;
   /* 22 row */
-  height: 88rem;
+  height: 80rem;
   background: #000;
-  overflow: hidden; }
+  overflow: hidden;
+  transform: rotateX(10deg); }
 
 .board-tile {
   display: inline-block;
@@ -25,37 +27,44 @@ body {
   padding: 0;
   width: 4rem;
   height: 4rem;
-  outline: 2px solid #F0F8; }
+  outline: 2px solid #F0F8;
+  transform: translateX(0) translateY(0); }
 
 .c-0 {
-  left: 0rem; }
+  left: -4rem; }
 
 .c-1 {
-  left: 4rem; }
+  left: 0rem; }
 
 .c-2 {
-  left: 8rem; }
+  left: 4rem; }
 
 .c-3 {
-  left: 12rem; }
+  left: 8rem; }
 
 .c-4 {
-  left: 16rem; }
+  left: 12rem; }
 
 .c-5 {
-  left: 20rem; }
+  left: 16rem; }
 
 .c-6 {
-  left: 24rem; }
+  left: 20rem; }
 
 .c-7 {
-  left: 28rem; }
+  left: 24rem; }
 
 .c-8 {
-  left: 32rem; }
+  left: 28rem; }
 
 .c-9 {
+  left: 32rem; }
+
+.c-10 {
   left: 36rem; }
+
+.c-11 {
+  left: 40rem; }
 
 .r-0 {
   top: 0rem; }
