--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,21 @@ body {
     transform: translateX(0) translateY(0);
 }
 
+.offense1 {
+    position: absolute;
+    left: 16rem;
+    top: 51rem;
+    margin: 0;
+    padding: 0;
+    width: 3rem;
+    height: 3rem;
+    border: 6px solid #FF0;
+    border-top: 2px solid white;
+    border-bottom: 6px solid #664;
+    background: #FF0A;
+    border-radius: 50%;
+}
+
 $col-slug: "c";
 
 @for $i from 0 through 11 {
