--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,12 +40,7 @@ body {
     transform: translateX(0) translateY(0);
 }
 
-.offense1 {
-    position: absolute;
-    left: 16rem;
-    top: 51rem;
-    margin: 0;
-    padding: 0;
+.piece {
     width: 3rem;
     height: 3rem;
     border: 6px solid #FF0;
@@ -53,6 +48,14 @@ body {
     border-bottom: 6px solid #664;
     background: #FF0A;
     border-radius: 50%;
+}
+
+.offense1 {
+    position: absolute;
+    left: 16rem;
+    top: 51rem;
+    // margin: 0;
+    // padding: 0;
 }
 
 $col-slug: "c";
