--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ body {
   outline: 2px solid #F0F8;
   transform: translateX(0) translateY(0); }
 
-.piece {
+.player {
   width: 3rem;
   height: 3rem;
   border: 6px solid #FF0;
@@ -39,7 +39,7 @@ body {
   background: #FF0A;
   border-radius: 50%; }
 
-.offense1 {
+.offense0 {
   position: absolute;
   left: 15.8rem;
   top: 51rem; }
