--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,7 +40,7 @@ body {
     transform: translateX(0) translateY(0);
 }
 
-.piece {
+.player {
     width: 3rem;
     height: 3rem;
     border: 6px solid #FF0;
@@ -50,7 +50,7 @@ body {
     border-radius: 50%;
 }
 
-.offense1 {
+.offense0 {
     position: absolute;
     left: 15.8rem;
     top: 51rem;
