--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,22 +27,18 @@ body {
   padding: 0;
   width: 4rem;
   height: 4rem;
-  outline: 2px solid #F0F8;
-  transform: translateX(0) translateY(0); }
+  background: url("../images/pas-tile.gif"); }
 
 .player {
   width: 3rem;
   height: 3rem;
-  border: 6px solid #FF0;
-  border-top: 2px solid white;
-  border-bottom: 6px solid #664;
   background: #FF0A;
   border-radius: 50%; }
 
 .offense0 {
   position: absolute;
-  left: 15.8rem;
-  top: 51rem; }
+  left: 16.5rem;
+  top: 52em; }
 
 .c-0 {
   left: -4rem; }
