--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,9 +1,10 @@
 html {
-  font-size: 8px; }
+  font-size: 8px;
+  background-color: #000; }
 
 body {
   margin: 0;
-  background-color: "#111F"; }
+  background-color: #111111; }
 
 #board-container {
   perspective: 30rem; }
@@ -16,7 +17,7 @@ body {
   width: 36rem;
   /* 22 row */
   height: 80rem;
-  background: #000;
+  background: "#000A";
   overflow: hidden;
   transform: rotateX(10deg); }
 
@@ -41,34 +42,48 @@ body {
   width: 3rem;
   height: 3rem;
   margin: auto;
-  border-radius: 50%; }
+  border-radius: 50%;
+  opacity: 0.9; }
+
+.teamA0 {
+  background-color: #ffff00;
+  border-bottom: 4px solid red; }
 
 .teamA1 {
-  background: "#DF0A"; }
+  background-color: #ddff00;
+  border-bottom: 4px solid red; }
 
 .teamA2 {
-  background: "#FC0A"; }
+  background-color: #ffcc00;
+  border-bottom: 4px solid red; }
 
 .teamA3 {
-  background: "#AF0A"; }
+  background-color: #aaff00;
+  border-bottom: 4px solid red; }
 
 .teamA4 {
-  background: "#FA0A"; }
+  background-color: #ffaa00;
+  border-bottom: 4px solid red; }
 
 .teamB0 {
-  background: "#F0FA"; }
+  background-color: #ff00ff;
+  border-bottom: 4px solid white; }
 
 .teamB1 {
-  background: "#95FA"; }
+  background-color: #cc22ff;
+  border-bottom: 4px solid white; }
 
 .teamB2 {
-  background: "#F4AA"; }
+  background-color: #ff44aa;
+  border-bottom: 4px solid white; }
 
 .teamB3 {
-  background: "#47FA"; }
+  background-color: #8822ff;
+  border-bottom: 4px solid white; }
 
 .teamB4 {
-  background: "#F66A"; }
+  background-color: #ff4466;
+  border-bottom: 4px solid white; }
 
 .c-0 {
   left: -4rem; }
