recentered bad-guy colors in sass

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -109,27 +109,27 @@ body {
   mix-blend-mode: screen; }
 
 .teamB0 {
-  background-color: #ff00ff;
+  background-color: #8822ff;
   border-bottom: 4px solid white;
   mix-blend-mode: screen; }
 
 .teamB1 {
-  background-color: #ff44aa;
+  background-color: #aa22aa;
   border-bottom: 4px solid white;
   mix-blend-mode: screen; }
 
 .teamB2 {
-  background-color: #cc22ff;
+  background-color: #4400ff;
   border-bottom: 4px solid white;
   mix-blend-mode: screen; }
 
 .teamB3 {
-  background-color: #ff4466;
+  background-color: #dd1199;
   border-bottom: 4px solid white;
   mix-blend-mode: screen; }
 
 .teamB4 {
-  background-color: #8822ff;
+  background-color: #2200ff;
   border-bottom: 4px solid white;
   mix-blend-mode: screen; }
 
