--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -120,12 +120,12 @@ $teamA-slug: "teamA";
     }
 }
 
-$myPurple: #ff00ff;
+$myPurple: #8822ff;
 // what is wrong with line 79????  sass can't build it.
-$myPBlue: #cc22ff;
-$myPRed: #ff44aa;
-$myBlue: #8822ff;
-$myRed: #ff4466;
+$myPBlue: #4400ff;
+$myPRed: #aa22aa;
+$myBlue: #2200ff;
+$myRed: #dd1199;
 
 $b-player-colors: $myPurple,$myPRed,$myPBlue,$myRed,$myBlue ;
 
