--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -55,8 +55,7 @@ body div {
   /* 22 row */
   height: 80rem;
   background: "#000A";
-  overflow: hidden;
-  transform: rotateX(10deg); }
+  overflow: hidden; }
 
 .tile-container {
   opacity: 0.8; }
@@ -91,96 +90,106 @@ body div {
   grid-column: 3/4;
   justify-self: center;
   width: 3rem;
-  height: 3rem;
+  height: 2.4rem;
   border-radius: 50%;
   opacity: 0.9;
   font-family: 'Graduate', monospace;
-  font-size: 2rem;
-  line-height: 4rem;
+  font-size: 1.8rem;
+  line-height: 2.9rem;
   text-align: center; }
 
 .dop-left {
   grid-column: 1/2;
   justify-self: center;
-  width: 3rem;
-  height: 3rem;
+  width: .5;
+  height: 2.4rem;
   border-radius: 50%;
   opacity: 0.9;
   font-family: 'Graduate', monospace;
-  font-size: 2rem;
-  line-height: 4rem;
+  font-size: 1.8rem;
+  line-height: 2.9rem;
   text-align: center; }
 
 .dop-right {
   grid-column: 5/6;
   justify-self: center;
   width: 3rem;
-  height: 3rem;
+  height: 2.4rem;
   border-radius: 50%;
   opacity: 0.9;
   font-family: 'Graduate', monospace;
-  font-size: 2rem;
-  line-height: 4rem;
+  font-size: 1.8rem;
+  line-height: 2.9rem;
   text-align: center; }
 
 .teamA0 {
   background-color: #ffff00;
   color: red;
-  border-bottom: 4px solid red;
+  border-bottom: 6px solid red;
+  border-top: 2px solid red;
   mix-blend-mode: screen; }
 
 .teamA1 {
   background-color: #ddff00;
   color: red;
-  border-bottom: 4px solid red;
+  border-bottom: 6px solid red;
+  border-top: 2px solid red;
   mix-blend-mode: screen; }
 
 .teamA2 {
   background-color: #ffcc00;
   color: red;
-  border-bottom: 4px solid red;
+  border-bottom: 6px solid red;
+  border-top: 2px solid red;
   mix-blend-mode: screen; }
 
 .teamA3 {
   background-color: #aaff00;
   color: red;
-  border-bottom: 4px solid red;
+  border-bottom: 6px solid red;
+  border-top: 2px solid red;
   mix-blend-mode: screen; }
 
 .teamA4 {
   background-color: #ffaa00;
   color: red;
-  border-bottom: 4px solid red;
+  border-bottom: 6px solid red;
+  border-top: 2px solid red;
   mix-blend-mode: screen; }
 
 .teamB0 {
   background-color: #8822ff;
   color: white;
-  border-bottom: 4px solid white;
+  border-top: 2px solid white;
+  border-bottom: 6px solid white;
   mix-blend-mode: screen; }
 
 .teamB1 {
   background-color: #aa22aa;
   color: white;
-  border-bottom: 4px solid white;
+  border-top: 2px solid white;
+  border-bottom: 6px solid white;
   mix-blend-mode: screen; }
 
 .teamB2 {
   background-color: #4400ff;
   color: white;
-  border-bottom: 4px solid white;
+  border-top: 2px solid white;
+  border-bottom: 6px solid white;
   mix-blend-mode: screen; }
 
 .teamB3 {
   background-color: #dd1199;
   color: white;
-  border-bottom: 4px solid white;
+  border-top: 2px solid white;
+  border-bottom: 6px solid white;
   mix-blend-mode: screen; }
 
 .teamB4 {
   background-color: #2200ff;
   color: white;
-  border-bottom: 4px solid white;
+  border-top: 2px solid white;
+  border-bottom: 6px solid white;
   mix-blend-mode: screen; }
 
 .c-0 {
