--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -67,7 +67,7 @@ body div {
     background: "#000A";
     overflow: hidden;
 
-    transform: rotateX(10deg);
+    // transform: rotateX(10deg);
 }
 
 .tile-container {
@@ -82,6 +82,8 @@ body div {
     width: 4rem;
     height: 4rem;
     background: url('../images/pas-tile.gif');
+    // background: url('../images/pas-tile-black.gif');
+    
 }
 
 // sass has no problem with these
@@ -116,13 +118,13 @@ $a-player-colors: $myYellow,$myYGreen,$myYOrange,$myGreen,$myOrange ;
     grid-column: 3/4;
     justify-self: center;
     width: 3rem;
-    height: 3rem;
+    height: 2.4rem;
     border-radius: 50%;
     opacity: 0.9;
     // for jerseyNum
     font-family: 'Graduate', monospace;
-    font-size: 2rem;
-    line-height: 4rem;
+    font-size: 1.8rem;
+    line-height: 2.9rem;
     text-align: center;
 }
 
@@ -130,14 +132,14 @@ $a-player-colors: $myYellow,$myYGreen,$myYOrange,$myGreen,$myOrange ;
 .dop-left {
     grid-column: 1/2;
     justify-self: center;
-    width: 3rem;
-    height: 3rem;
+    width: .5;
+    height: 2.4rem;
     border-radius: 50%;
     opacity: 0.9;
         // for jerseyNum
     font-family: 'Graduate', monospace;
-    font-size: 2rem;
-    line-height: 4rem;
+    font-size: 1.8rem;
+    line-height: 2.9rem;
     text-align: center;
 }
 
@@ -145,13 +147,13 @@ $a-player-colors: $myYellow,$myYGreen,$myYOrange,$myGreen,$myOrange ;
     grid-column: 5/6;
     justify-self: center;
     width: 3rem;
-    height: 3rem;
+    height: 2.4rem;
     border-radius: 50%;
     opacity: 0.9;
     // for jerseyNum
     font-family: 'Graduate', monospace;
-    font-size: 2rem;
-    line-height: 4rem;
+    font-size: 1.8rem;
+    line-height: 2.9rem;
     text-align: center;
 }
 
@@ -162,7 +164,8 @@ $teamA-slug: "teamA";
     .#{$teamA-slug}#{$i} {
         background-color: nth($a-player-colors, ($i+1));
         color: red;
-        border-bottom: 4px solid red;
+        border-bottom: 6px solid red;
+        border-top: 2px solid red;
         mix-blend-mode: screen;
     }
 }
@@ -181,7 +184,8 @@ $teamB-slug: "teamB";
     .#{$teamB-slug}#{$i} {
         background-color: nth($b-player-colors, ($i+1));
         color: white;
-        border-bottom: 4px solid white;
+        border-top: 2px solid white;
+        border-bottom: 6px solid white;
         mix-blend-mode: screen;
     }
 }
