--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,11 +82,8 @@ body div {
     width: 4rem;
     height: 4rem;
     background: url('../images/pas-tile.gif');
-    // background: url('../images/pas-tile-black.gif');
-    
 }
 
-// sass has no problem with these
 $myYellow: #ffff00;
 $myYGreen: #ddff00;
 $myYOrange: #ffcc00;
@@ -95,7 +92,7 @@ $myOrange: #ffaa00;
 
 $a-player-colors: $myYellow,$myYGreen,$myYOrange,$myGreen,$myOrange ;
 
-.player-containerA {
+.player-containerAv {
     position: absolute;
     display: grid;
     grid-auto-columns: 1fr;
@@ -117,77 +114,32 @@ $a-player-colors: $myYellow,$myYGreen,$myYOrange,$myGreen,$myOrange ;
     position: absolute;
     grid-column: 3/4;
     justify-self: center;
-    width: 3rem;
-    height: 2.4rem;
-    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+    // border-radius: 50%;
     opacity: 0.9;
     // for jerseyNum
-    font-family: 'Graduate', monospace;
-    font-size: 1.8rem;
-    line-height: 2.9rem;
-    text-align: center;
 }
 
 // dopplegangers on left and right
 .dop-left {
     grid-column: 1/2;
     justify-self: center;
-    width: .5;
-    height: 2.4rem;
-    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+    // border-radius: 50%;
     opacity: 0.9;
-        // for jerseyNum
-    font-family: 'Graduate', monospace;
-    font-size: 1.8rem;
-    line-height: 2.9rem;
-    text-align: center;
+    // for jerseyNum
 }
 
 .dop-right {
     grid-column: 5/6;
     justify-self: center;
-    width: 3rem;
-    height: 2.4rem;
-    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+    // border-radius: 50%;
     opacity: 0.9;
     // for jerseyNum
-    font-family: 'Graduate', monospace;
-    font-size: 1.8rem;
-    line-height: 2.9rem;
-    text-align: center;
-}
-
-
-$teamA-slug: "teamA";
-
-@for $i from 0 through 4 {
-    .#{$teamA-slug}#{$i} {
-        background-color: nth($a-player-colors, ($i+1));
-        color: red;
-        border-bottom: 6px solid red;
-        border-top: 2px solid red;
-        mix-blend-mode: screen;
-    }
-}
-
-$myPurple: #8822ff;
-$myPBlue: #4400ff;
-$myPRed: #aa22aa;
-$myBlue: #2200ff;
-$myRed: #dd1199;
-
-$b-player-colors: $myPurple,$myPRed,$myPBlue,$myRed,$myBlue ;
-
-$teamB-slug: "teamB";
-
-@for $i from 0 through 4 {
-    .#{$teamB-slug}#{$i} {
-        background-color: nth($b-player-colors, ($i+1));
-        color: white;
-        border-top: 2px solid white;
-        border-bottom: 6px solid white;
-        mix-blend-mode: screen;
-    }
 }
 
 $col-slug: "c";
@@ -203,5 +155,24 @@ $row-slug: "r";
 @for $i from 0 through 22 {
     .#{$row-slug}-#{$i} {
         top: $i*4rem;
+    }
+}
+
+$teamA-slug: "A0";
+$teamB-slug: "B0";
+
+@for $i from 0 through 4 {
+    .#{$teamA-slug}#{$i} {
+        background-image: url("../images/#{$teamA-slug}#{$i}.png");
+        background-size: 100%;
+        mix-blend-mode: screen;
+    }
+}
+
+@for $i from 0 through 4 {
+    .#{$teamB-slug}#{$i} {
+        background-image: url("../images/#{$teamB-slug}#{$i}.png");
+        background-size: 100%;
+        mix-blend-mode: screen;
     }
 }
