--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,7 +67,7 @@ body div {
     background: "#000A";
     overflow: hidden;
 
-    // transform: rotateX(10deg);
+    transform: rotateX(10deg);
 }
 
 .tile-container {
